--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#0f172a",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/10444/10444321.png",
+      "src": "https://i.imgur.com/n4q3n2t.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/10444/10444321.png",
+      "src": "https://i.imgur.com/n4q3n2t.png",
       "sizes": "512x512",
       "type": "image/png"
     }
