--- a/manifest.json
+++ b/manifest.json
@@ -7,14 +7,14 @@
   "theme_color": "#0f172a",
   "icons": [
     {
-      "src": "https://i.imgur.com/n4q3n2t.png",
+      "src": "./icon.jpg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/jpeg"
     },
     {
-      "src": "https://i.imgur.com/n4q3n2t.png",
+      "src": "./icon.jpg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/jpeg"
     }
   ]
 }
